Do not produce BR elements on pasting plain text in TEXTAREA

This CL makes already-broken TEXTAREA with white-space:normal/nowrap more broken.
We'll fix it soon.  This CL has no behavior changes in other cases.

BUG=593184

Review URL: https://codereview.chromium.org/1776913002

Cr-Commit-Position: refs/heads/master@{#380105}